* Paginated tables revert to the first page when sorted.
* Selectable and searchable tables default to selecting matches.
* Sankey Butterflies avoid focusing redundantly on the same focal node.
* Clean up Table options for searching and pagination.
* Add Table API for searching.
* Add ability to specify an initial column to sort by header text.
* Clean up Table documentation for sorting and searching.
* Sunburst node now places root node inside center circle.

0.1.7
* Rename NPM module to "chartcollection"
* Release under CC-BY 4.0 license
* Initialize global SVG defs when importing C3 module via require()
* Safe mode for Sankey to ensure nodes are at least as large as their links.
* Allow styling of the focal node for the Butterfly Sankey
* Workaround Chrome bug with SVG gradient masks for Butterfly Sankey
* Sankeys can extend past right edge to avoid overcrowding node columns

0.1.6
* Enable Cake builds for Less
* Expose drag_line_options for straight line layers.
* Fix Sankey regression from CoffeeScript compiler behavior change
* Update swimlanes example to not use CSS style broken on OSX Chrome

0.1.5
* Enable Cake builds for TypeScript
* fix path_options styling for path layers

0.1.4
* Publish to NPM as "q3"

0.1
* Initial Release

################################################################################
# Historic C4
################################################################################

0.4.2
* Disable page zooming over plots and capture 'pointer' events.
* Stackable layers tolerate empty data arrays for both layer and stacks.
* Fortify and update TypeScript typings
* Fix legend redraw() with nested bullets
* Fix plot_legend regression for animating stacked layers while zoomed

0.4.1
* Zoom plots center zoom action when axes are present.
* Bar graph automatic bar width based on neighbor proximity instead of linear distribution

0.4
* Add ability for path layers to render circles at data points along path