@@ -63,7 +63,7 @@
         Selectable:<br />
         <label><input type="radio" name="selectable" value="multi" checked />Multiple</label><br />
         <label><input type="radio" name="selectable" value="single" />Single</label><br />
-        <label><input type="radio" name="selectable" value="true" />Single or <kbd>Ctrl</kbd>-click for multiple</label><br />
+        <label><input type="radio" name="selectable" value="true" />Single or <kbd>Ctrl-click</kbd> on Windows / <kbd>Command-click</kbd> on OSX for multiple selections</label><br />
         <label><input type="radio" name="selectable" value="false" />Disabled</label>
     </form>
 
